--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
 .App {
   text-align: center;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container {
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+}
+
+@media (max-width: 910px) {
+  .gallery {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-width: 50%;
+    -moz-column-width: 50%;
+    column-width: 50%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (max-width: 480px) {
+  .container { padding: 4.20%; }
+
+  .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+.project__img {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease0;
+  cursor: pointer;
+  margin-bottom: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.project__img:hover { filter: opacity(.8); }
+
+img { width: 100%; }
+
+.toolbar { margin-bottom: 20px; }
+
+button {
+  margin-right: 5px;
+  padding: 7px 16px;
+  font-size: 17px;
+  word-spacing: -3px;
+  color: #555555;
+  background-color: #fff;
+  border: 1px solid #555;
+}
+
+button:hover {
+  color: #fff;
+  background-color: #3E3E3E;
+}
+
+.active {
+  color: #fff;
+  background-color: #555;
+}
+
+@media (max-width: 480px) {
+  .toolbar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    width: 48.63%;
+    margin-bottom: 8px;
   }
+}
+
+@media (max-width: 397px) {
+  button { width: 100%; }
 }
